@@ -1,6 +1,7 @@
 package luckycoins.proxy;
 
 import luckycoins.LuckyCoins;
+import luckycoins.misc.KeybindHandler;
 import cpw.mods.fml.common.event.FMLInitializationEvent;
 import cpw.mods.fml.common.event.FMLPostInitializationEvent;
 import cpw.mods.fml.common.event.FMLPreInitializationEvent;
@@ -14,6 +15,7 @@ public class ClientProxy implements IProxy
 	@Override
 	public void init(FMLInitializationEvent e)
 	{
+		LuckyCoins.keybinds = new KeybindHandler();
 		LuckyCoins.keybinds.initKeybindings();
 	}
 	
