@@ -4,8 +4,11 @@
 3. Minor: important changes to a mod
 4. Build: Whenever the mod is built by ForgeGradle (IDE builds don't count). Also independent from the other ones
 
-a1.0-4 (2014/08/06 15:51 GMT+0)
+a1.0-5 (2014/08/06 16:03 GMT+0)
 - Fixed server crash: NoClassDefFoundError: net/minecraft/client/settings/KeyBinding
+
+a1.0-4 (2014/08/06 15:51 GMT+0)
+- Tried to fix server crash: NoClassDefFoundError: net/minecraft/client/settings/KeyBinding
 
 a1.0-3 (2014/08/06 12:08 GMT+0)
 - Added IFMLLoadingPlugin to load Access Transformers correctly
